--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "postcss-loader": "^5.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.0.2",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.34.0",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0"
